objects/Cost_Share_Contribution__c.object
<CustomObject>
    <fields>
        <fullName>Cash_Amount__c</fullName>
        <label>$ Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contribution_Date__c</fullName>
        <label>Contribution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Review__c</fullName>
        <label>Cost-Share Review</label>
        <referenceTo>Cost_Share_Review__c</referenceTo>
        <relationshipLabel>Cost-Share Contributions</relationshipLabel>
        <relationshipName>Cost_Share_Contributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DCN__c</fullName>
        <label>DCN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FY_Qtr__c</fullName>
        <label>FY-Qtr</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Amount__c</fullName>
        <label>Federal Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Kind_Amount__c</fullName>
        <label>In Kind Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Federal_Sponsor__c</fullName>
        <label>Non-Federal Sponsor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Non_Federal_Sponsor_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obligated_To__c</fullName>
        <label>Obligated To</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC__c</fullName>
        <label>PRC</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Cost_Share_Review__r.Agreement__r.Project_Number__r.GLLA_Project_Name__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <description>This object is used to store the GLLA Cash and In Kind Cost-Share Contribution details.</description>
    <label>Cost-Share Contribution</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Cost Share Contribution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost-Share Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contribution_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Cash_Amount__c</columns>
        <columns>In_Kind_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Cash_Contribution</fullName>
        <active>true</active>
        <label>Cash Contribution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Federal</fullName>
        <active>true</active>
        <label>Federal</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_Kind_Contribution</fullName>
        <active>true</active>
        <label>In Kind Contribution</label>
    </recordTypes>
</CustomObject>